<resources>
    <string name="app_name">Lyscan</string>

    <!-- BOTTOM NAVIGATION VIEW -->

    <string name="title_home" translatable="false">Scan</string>
    <string name="title_explorer">Discover</string>
    <string name="title_setting">Setting</string>

    <!-- END BOTTOM NAVIGATION VIEW -->

    <string name="appearance">Appearance</string>
    <string name="textNightThemeDark">Enable the light theme</string>
    <string name="textNightThemeLight">Enable the dark theme</string>
    <string name="NightThemePref">Night Mode</string>
    <string name="home_manga">No manga or no news</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="BdLoad">Save for offline</string>
    <string name="wait">Please wait</string>
    <string name="ongoing">Ongoing</string>
    <string name="finished">Finished</string>
    <string name="img" translatable="false">Image manga</string>
    <string name="account_image">Account Image</string>
    <string name="error_img">Error image</string>
    <string name="about">About</string>
    <string name="created">Created by Shawn Modestine in 2020</string>
    <string name="account">Account setting</string>
    <string name="hot" translatable="false">Hot</string>

</resources>
