<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/appearance">
        <SwitchPreference
            android:background="#FFFFFF"
            android:foregroundTint="#FFFFFF"
            android:foregroundTintMode="add"
            android:key="switchNightPref"
            android:summaryOff="@string/textNightThemeLight"
            android:summaryOn="@string/textNightThemeDark"
            android:theme="@style/DarkTheme"
            android:title="@string/NightThemePref" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:summary="0.1"
            android:title="Version" />
        <Preference
            android:summary="@string/created"
            android:title="@string/app_name" />

    </PreferenceCategory>

</PreferenceScreen>